# ssh-tunnel-manager

./: .gitignore  Dockerfile.build  README.md
.github/workflows/: build.yml
frontend/: README.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/assets/css/: main.css
frontend/src/components/: GroupSection.vue  LogConsole.vue  TemplatePicker.vue  TunnelCard.vue  TunnelForm.vue  TunnelFormModal.vue  TunnelKindBadge.vue  TunnelList.vue  TunnelStatusIndicator.vue
frontend/src/composables/: useConnectionTest.ts  usePortCheck.ts  useSshTemplates.ts
frontend/src/stores/: tunnels.js  tunnels.ts
frontend/src/types/: tunnel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credential_store.rs  diagnostics.rs  lib.rs  main.rs  models.rs  profile_store.rs  ssh_tunnel.rs
